argoroll-blue-green/virtualservice-example.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-bluegreen-active
spec:
  gateways:
  - istio-system/tls-redirect
  hosts:
  - rollout-demo.fredcorp.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: rollout-bluegreen-active.blue-green.svc.cluster.local
